# mveeg

./: .gitignore  README.md  pyproject.toml
src/mveeg/: __init__.py
src/mveeg/_shared/: __init__.py  config_base.py  io_filters.py  time_windows.py  topography.py
src/mveeg/decoding/: __init__.py  config.py  io.py  models.py  prepare.py  run.py  summaries.py  workflow.py  workflow_outputs.py  workflow_paths.py  workflow_subjects.py
src/mveeg/encoding/: __init__.py  config.py  io.py  prepare.py  run.py  summaries.py  validation.py  workflow.py  workflow_design.py  workflow_model.py  workflow_paths.py  workflow_pattern_expression.py
src/mveeg/io/: __init__.py  bids.py
src/mveeg/prep/: __init__.py  core.py  epoched_mat.py  epochs.py  logging.py  qc.py  subject_selection.py  visualizer.py  workflow.py  workflow_checkpoints.py  workflow_paths.py  workflow_status.py  workflow_subjects.py
src/mveeg/preprocessing/: __init__.py
src/mveeg/validation/: __init__.py
src/mvmodels/: __init__.py
src/mvmodels/summaries/: __init__.py
tests/: test_decoding_helpers.py  test_encoding_validation.py  test_import.py  test_io_bids.py  test_prep_qc.py  test_prep_workflow.py  test_shared_time_windows.py
